(Fix) flickering issue with the login and logout button

--- a/src/scss/HomePage.scss
+++ b/src/scss/HomePage.scss
@@ -44,8 +44,8 @@
       padding-left: 40px;
       height: 100%;
       border-left: 1px solid rgba(0,0,0,.1);
-
-
+      width: 140px;
+  
       &:hover {
         color: coral;
       }
